<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/edit_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:hint="@string/hint_address" />

        <RelativeLayout
            android:layout_width="117dp"
            android:layout_height="match_parent"
            android:gravity="right" >

            <CheckBox
                android:id="@+id/edit_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/confirm"
                android:visibility="visible" />
        </RelativeLayout>
    </LinearLayout>

    <RatingBar
        android:id="@+id/edit_valoracion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/load_foto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/load_foto" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="131dp" >

        <ToggleButton
            android:id="@+id/edit_tipo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textOff="@string/but_A"
            android:textOn="@string/but_B" />

        <EditText
            android:id="@+id/edit_info"
            android:layout_width="195dp"
            android:layout_height="match_parent"
            android:layout_weight="0.04"
            android:hint="@string/hint_info"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="132dp" >

    <EditText
        android:id="@+id/edit_comentar"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_weight="0.77"
        android:ems="10"
        android:hint="@string/hint_comentario"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/but_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/enviar_comentario" />
</LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/but_accept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/accept" />

        <Button
            android:id="@+id/but_remove"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/menu_delete" />
    </LinearLayout>

</LinearLayout>