<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/info_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/info_develloped"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/develloped_by" />

    <TextView
        android:id="@+id/info_develloppers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="6dp"
        android:text="@string/devellopers"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/info_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/version"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/info_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/date"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/info_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/info"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/info_rights"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/rights" />

</LinearLayout>