<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:text="Large Text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <RelativeLayout
            android:layout_width="117dp"
            android:layout_height="match_parent"
            android:gravity="right" >

            <ImageView
                android:id="@+id/imageconfirmed"
                android:layout_width="42dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:src="@drawable/tick"
                android:visibility="invisible" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/confirm"
                android:visibility="visible" />
        </RelativeLayout>
    </LinearLayout>

    <RatingBar
        android:id="@+id/ver_valoracion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:clickable="false"
        android:isIndicator="true" />

    <ImageView
        android:id="@+id/foto"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:src="@drawable/store" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ToggleButton
            android:id="@+id/ver_tipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:minHeight="50dp"
            android:textOff="@string/but_A"
            android:textOn="@string/but_B" />

        <TextView
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/view_comentar"
            android:layout_width="164dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textMultiLine" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:orientation="vertical"
            android:hint="@string/hint_comentario" >

            <Button
                android:id="@+id/but_ver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ver_comentarios" />

            <Button
                android:id="@+id/but_enviar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enviar_comentario" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/but_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/edit_store" />

    </LinearLayout>

</LinearLayout>